--- a/frag_globe.html
+++ b/frag_globe.html
@@ -158,7 +158,7 @@
 		
 		if(rim>0.0) color+=rimClr;
 		
-        gl_FragColor = vec4(color, 1.0);
+        gl_FragColor = vec4(color, 1.0);//vec4((bpnormal+vec3(1.0))/2.0,1.0);//
     }
 
     mat3 eastNorthUpToEyeCoordinates(vec3 positionMC, vec3 normalEC)
