Performance evaluation added

--- a/frag_globe.html
+++ b/frag_globe.html
@@ -10,6 +10,9 @@
 <div id="message" style="position:absolute;top:100px"></div> <!-- Pixel offset to avoid FPS counter -->
 <canvas id="canvas" style="border: none;" width="1024" height="768" tabindex="1"></canvas>
 
+<p> FPS=</p>
+<p id="FPS"> 0</p>
+
 <script id="skyboxvs" type="x-shader/x-vertex">
     uniform mat4 u_Model;
     uniform mat4 u_View;
